Handle long Schedule Playlist item names and timelines Fix Playlist item buttons alignment on mobile Fix #2060. [stage-20]

--- a/web/scss/sections/schedules.scss
+++ b/web/scss/sections/schedules.scss
@@ -18,7 +18,7 @@
     }
 
     .list-group-item {
-      height: 62px;
+      min-height: 62px;
       padding-top: 0px;
       padding-bottom: 0px;
     }
